Fix some font spacing to more closely match design

--- a/components/Customers/Customers.module.scss
+++ b/components/Customers/Customers.module.scss
@@ -149,6 +149,8 @@
 .caseOverline {
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.75px;
   color: #ebff5e;
 }
 
