--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -176,7 +176,7 @@ h1 {
 h2 {
   font-size: 58px;
   line-height: 76px !important;
-  letter-spacing: -0.5px;
+  letter-spacing: -1.5px;
 }
 
 h3 {
